--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
       "publish": [
         {
           "provider": "github",
-          "owner": "fayi-fayi",
+          "owner": "thefayid",
           "repo": "PantherPOS"
         }
       ]
