--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "main": "dist-electron/main.js",
   "scripts": {
     "dev": "concurrently \"npm.cmd run dev:vite\" \"npm.cmd run dev:electron\"",
-    "dev:vite": "set VITE_DEV_SERVER_URL=http://127.0.0.1:5173&& vite",
-    "dev:electron": "wait-on tcp:127.0.0.1:5173 && set ELECTRON_RUN_AS_NODE=&& set VITE_DEV_SERVER_URL=http://127.0.0.1:5173&& electron .",
+    "dev:vite": "set VITE_DEV_SERVER_URL=http://127.0.0.1:5174 && vite",
+    "dev:electron": "tsc -p electron/tsconfig.json && wait-on tcp:127.0.0.1:5174 && set VITE_DEV_SERVER_URL=http://127.0.0.1:5174 && electron .",
     "build": "vite build && tsc -p electron/tsconfig.json && electron-builder",
     "lint": "eslint .",
     "preview": "vite preview"
