feat: New Marketing tools & Settings upgrade

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "electron-updater": "^6.7.3",
     "fastify": "^4.29.1",
     "fuse.js": "^7.1.0",
+    "html-to-image": "^1.11.13",
     "jsbarcode": "^3.12.3",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
